# pitch-changer

./: .gitignore  .gitmodules  AGENTS.md  README.md  eslint.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.zed/: settings.json
extension/: README.md  package-lock.json  package.json  tsconfig.json
extension/assets/: manifest.json  popup.html
extension/assets/icons/: ATTRIBUTION.md
extension/src/: common.ts  pitch-changer-content.ts  pitch-changer-override-ac.ts  pitch-changer-processor.ts  popup.ts
public/: main.css
src/: audio-processor-client.ts  audio-processor-types.ts  audio-processor-worker.ts  audio-processor.ts  benchmark.ts  main.ts  media-decoder.ts  media-encoder.ts  player-processor-queue.test.ts  player-processor-queue.ts  player-processor.ts  player-types.ts  player.ts  process-audio.ts  recorder-processor.ts  recorder-types.ts  recorder.ts  ring-buffer.test.ts  ring-buffer.ts  ring-buffer.worker-test.ts  save-dialog.ts  spectrogram.ts  sync.test.ts  sync.ts  types.ts  utils.test.ts  utils.ts  wasm-integration.test.ts
src/assets/: main.css
wasm/: CMakeLists.txt  Cargo.toml  build.rs  run-build.sh
wasm/.cargo/: config.toml
wasm/benches/: phase_gradient.rs  realfft_benchmark.rs  sort_benchmark.rs
wasm/examples/: example.rs  pitch_shift.rs
wasm/src/: basic_vocoder.rs  basic_vocoder_old.rs  envelope_shifter.rs  float4.rs  formant_preserving_pitch_shifter.rs  histogram.rs  lib.rs  main.cpp  multi_processor.rs  owned.rs  peak_corrector.rs  pffft.rs  phase_gradient_time_stretch.rs  phase_gradient_vocoder.rs  pitch_shifter.rs  podarray.h  real_fft.rs  resampler.rs  stft.rs  time_stretcher.rs  util.rs  web.rs  window.rs
wasm/src/pffft_rs/: LICENSE  mod.rs  pass.rs  vector4.rs
