[package]
name = "wasm-main-module"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "example"

[dependencies]
anyhow = "1.0"
js-sys = "0.3"
wasm-bindgen = "=0.2.108"
realfft = { version = "3.5", features = ["wasm_simd"] }
lanczos-resampler = "0.4"

[dev-dependencies]
argh = "0.1"
hound = "3.5.0"
plotters = { version = "0.3", default-features = false, features = ["line_series", "svg_backend"] }
rand = "0.9"
symphonia = { version = "0.5", features = ["aac", "isomp4", "mp3"] }

[profile.release]
# Disabled by default for better build times
# debug = true
