[package]
name = "wasm-main-module"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "example"

[dependencies]
anyhow = "1.0"
js-sys = "0.3"
wasm-bindgen = "=0.2.108"
realfft = { version = "3.5", features = ["wasm_simd"] }
rubato = "1.0"
audioadapter = "2.0"
audioadapter-buffers = "2.0"

[dev-dependencies]
argh = "0.1"
hound = "3.5.0"
plotters = { version = "0.3", default-features = false, features = ["line_series", "svg_backend"] }
rand = "0.9"
symphonia = { version = "0.5", features = ["aac", "isomp4", "mp3"] }
# Disabled by default for better build times
# debug = true

[lints.clippy]
# Reading .iter().zip() chains is considerably harder for me, while the resulting code is the same if we bound the
# iteration upper bound.
needless-range-loop = "allow"
