[package]
name = "wasm-main-module"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "example"

[[bench]]
name = "phase_gradient"
harness = false

[[bench]]
name = "sort_benchmark"
harness = false

[[bench]]
name = "realfft_benchmark"
harness = false

[dependencies]
anyhow = "1.0"
js-sys = "0.3"
wasm-bindgen = "=0.2.115"
realfft = { version = "3.5", features = ["wasm_simd"] }
rubato = "1.0"
audioadapter = "2.0"
audioadapter-buffers = "2.0"

[dev-dependencies]
argh = "0.1"
criterion = "0.8"
hound = "3.5.0"
plotters = { version = "0.3", default-features = false, features = ["line_series", "svg_backend"] }
rand = "0.10"
symphonia = { version = "0.5", features = ["aac", "isomp4", "mp3"] }

[build-dependencies]
cc = { version = "1.2", optional = true }

[features]
pffft = ["dep:cc"]

[profile.release]
# Disabled by default for better build times
# debug = true

[lints.clippy]
# Reading .iter().zip() chains is considerably harder for me, while the generated code is the same if we bound the
# iteration upper bound.
manual_range_contains = "allow"
needless-range-loop = "allow"
